--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -103,7 +103,7 @@
         android:id="@+id/textViewHere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Diplay chosen ports here"
+        android:text="No ports added yet"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
