--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -67,7 +67,7 @@
             />
 
         <EditText
-            android:id="@+id/To"
+            android:id="@+id/To_field"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
