--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -6,10 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
+
     <TextView
+        android:id="@+id/list_item_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list_item_text_view"
-        />
+        android:textStyle="bold" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
